borrar la asistencia de un evento ahora requiere un JSON con el id del usuario y del evento
